--- a/styles.css
+++ b/styles.css
@@ -3,17 +3,45 @@
 }
 
 body {
-    background-color: white;
+    background-color: black;
     width: 100%
     height: auto;
+    margin: 0 auto;
+} 
+
+.text {
+    display: flex;
+    color: white;
+    flex-direction: column;
+    padding: 50px;
+}
+
+.title {
+    margin-bottom: 20px;
+}
+
+.instructions {
+    margin-bottom: 30px;
+}
+
+.grid-size-btn {
+    width: 100px;
+    height: 45px;
+    border-radius: 5px;
+}
+
+.grid-size-btn:hover {
+    opacity: 80%;
+    box-shadow: 0 5px black;
+    transform: translateY(2px);
 }
 
 .grid-container {
-    margin-top: 100px;
-    margin-bottom: 100px;
-    background-color: grey;
-    border: black solid 0.1px;
-    
+    margin-top: 20px;
+    margin-bottom: 50px;
+    background-color: white;
+    border: grey solid 0.1px;
+    border-radius: 5px;
     width: 960px;
     height: 960px;
     display: flex;
@@ -29,8 +57,38 @@ body {
 
 .row {
     background-color: white;
-    border: 0.1rem black solid;
+    border: 0.1rem grey solid;
     width: 100%;
     height: 100%;
 }
 
+@media only screen and (max-width: 912px) {
+    .instructions {
+        margin-bottom: 20px;
+    }
+    .text {
+        padding: 40px;
+    }
+    .grid-container {
+        margin-top: 15px;
+        margin-bottom: 35px;
+        width: 645px;
+        height: 645px;
+    }
+}
+
+@media only screen and (max-width: 760px) {
+       
+    .instructions {
+        margin-bottom: 10px;
+    } 
+    .text {
+        padding: 30px;
+    }
+    .grid-container {
+        margin-top: 10px;
+        margin-bottom: 25px;
+        width: 430px;
+        height: 430px;
+    }
+}
